styles/layout.css
/* MY CSS FOR EASY LAYOUT - gnlca */


.extendedFont {
  font-family: "Esteso";
}

.fontSmall {
  font-size: small;
}
.fontSmaller {
  font-size: smaller;
}

.sticky {
  position: fixed;
  top: 0;
  width: 100%;
}

.maxWidth42 {
  max-width: 42rem;
}

.noMarginPadding {
  margin: 0;
  padding: 0;
}

.fullHeight {
  height: 100vh;
}
.width100 {
  width: 100%;
}
.noLink {
  color: inherit;
  text-decoration: none;
}
.noList {
  list-style: none;
}

.hidden {
  display: none;
}

.inline li {
  display: inline;
}

.center {
  justify-items: center;
  align-items: center;
}

/* GRIDDDDD */

.grid {
  display: grid;
}
.inlineGrid {
  display: inline-grid;
}

.minWidthMaxContent {
  min-width: max-content;
}
.minHeightMaxContent {
  min-height: max-content;
}

.maxWidthMinContent {
  max-width: min-content;
}

.rowMinMax {
  grid-auto-rows: minmax(min-content, max-content);
}
.colMinMax {
  grid-auto-columns: minmax(min-content, max-content);
}
.rowMax {
  grid-auto-rows: max-content;
}
.colMax {
  grid-auto-columns: max-content;
}

.colGap03 {
  column-gap: 0.3em;
}
.colGap05 {
  column-gap: 0.5em;
}
.colGap07 {
  column-gap: 0.7em;
}
.colGap1 {
  column-gap: 1em;
}
.colGap15 {
  column-gap: 1.5em;
}

.colGap2 {
  column-gap: 2em;
}
.colGap3 {
  column-gap: 3em;
}

.rowGap03 {
  row-gap: 0.3em;
}
.rowGap05 {
  row-gap: 0.5em;
}

.rowGap07 {
  row-gap: 0.7em;
}
.rowGap1 {
  row-gap: 1em;
}

.rowGap12 {
  row-gap: 1.2em;
}
.rowGap15 {
  row-gap: 1.5em;
}

.rowGap2 {
  row-gap: 2em;
}

.rowGap22 {
  row-gap: 2.2em;
}
.rowGap25 {
  row-gap: 2.5em;
}
.rowGap3 {
  row-gap: 3em;
}

.alignCenter {
  align-items: center;
}

.alignSelf {
  align-self: center;
}

.alignContent {
  align-content: center;
}

.justifyCenter {
  justify-self: center;
}
.justifyEnd {
  justify-self: end;
}
.justifyStart {
  justify-self: start;
}

.col2 {
  grid-template-columns: repeat(2, 1fr);
}
.col3 {
  grid-template-columns: repeat(3, 1fr);
}

.col4 {
  grid-template-columns: repeat(4, 1fr);
}
.col4auto {
  grid-template-columns: repeat(4, auto);
}

.col2auto {
  grid-template-columns: repeat(2, auto);
}
.col3auto {
  grid-template-columns: repeat(3, auto);
}

.row2auto {
  grid-template-columns: repeat(3, auto);
}

/* FLEXXXXXX */

.flex {
  display: flex;
}

.spaceBetween {
  justify-content: space-between;
}

.justifyContentCenter {
  justify-content: center;
}

.floatRight {
  float: right;
}

.floatLeft {
  float: left;
}

.mxAuto {
  margin-right: auto;
  margin-left: auto;
}

.flexGrow {
  flex-grow: 1;
}

